[gd_scene load_steps=6 format=2]

[ext_resource path="res://InfoWindow.gd" type="Script" id=1]
[ext_resource path="res://Font/komika-displaybold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[node name="InfoWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 262.0
margin_bottom = 130.0
script = ExtResource( 1 )

[node name="RamLabel" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 49.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 34.0
rect_scale = Vector2( 0.62, 0.62 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "RAM: 32mb"

[node name="LoadLabel" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 49.0
margin_top = 17.0
margin_right = 213.0
margin_bottom = 57.0
rect_scale = Vector2( 0.62, 0.62 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Load: 50%"

[node name="FpsLabel" type="Label" parent="."]
modulate = Color( 0, 1, 0.0392157, 1 )
margin_left = 49.0
margin_top = 32.0
margin_right = 186.0
margin_bottom = 72.0
rect_scale = Vector2( 0.62, 0.62 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "FPS: 000"
